upgrade: ->v3.0 DST-031-DST-035 Distributed Systems - batch 6